# final_robotica

./: Dockerfile  mensajesParaCoppelia  procesar_output_cinematico.py  procesar_output_lazo_cerrado.py  start-docker.sh  start-podman.sh
volume/: generador_de_velocidades.py  launch_lazo_cerrado.sh  launch_velocidades.sh  launch_velocidades_EKF.sh
volume/imu_laser/: CMakeLists.txt  package.xml
volume/imu_laser/coppeliaSim/: imu_bias.ttt  laser_landmarks.ttt
volume/imu_laser/src/: imu_calibrator.cpp  imu_calibrator.h  imu_calibrator_node.cpp  landmark_detector.cpp  landmark_detector.h  landmark_detector_node.cpp
volume/kfilter/: CMakeLists.txt  package.xml
volume/lazo_cerrado/: CMakeLists.txt  lazo_cerrado.rviz  package.xml
volume/lazo_cerrado/include/lazo_cerrado/: TrajectoryFollower.h
volume/lazo_cerrado/launch/: lazo_cerrado.launch.py
volume/lazo_cerrado/src/: KinematicPositionController.cpp  KinematicPositionController.h  TrajectoryFollower.cpp  kinematic_position_controller_node.cpp  logger_node.cpp  trajectory_generator_node.cpp  trajectory_waypoints_node.cpp
volume/modelo_omnidireccional/: CMakeLists.txt  package.xml
volume/modelo_omnidireccional/coppeliaSim/: omni_cinematico.ttt  omni_ekf.ttt  tpfinal.rviz
volume/modelo_omnidireccional/src/: omni_odometry.cpp  omni_odometry.h  omni_odometry_node.cpp
volume/outputs/: cmd_vel_1.txt  cmd_vel_2.txt  gt_2.txt  odom_1.txt  odom_2.txt
volume/outputs/EKF/: cmd_vel_TEST.txt  cmd_vel_seq3.txt  ekf_TEST.txt  gt_TEST.txt  gt_seq3.txt  odom_TEST.txt  odom_seq3.txt
volume/outputs/lazo_cerrado/: goal_TEST.txt  goal_path.txt  gt_TEST.txt  gt_exp1.txt  gt_exp3.txt  gt_exp4.txt  gt_exp5.txt  gt_exp7.txt
volume/robmovil_ekf/: CMakeLists.txt  package.xml
volume/robmovil_ekf/coopeliaSim/: laser_landmarks.ttt
volume/robmovil_ekf/launch/: ekf.rviz  robmovil_ekf.launch.py
volume/robmovil_ekf/src/: .localizer_ekf.cpp.swm  .localizer_ekf.cpp.swn  .localizer_ekf.cpp.swo  localizer.cpp  localizer.h  localizer_ekf.cpp  localizer_ekf.h  localizer_node.cpp
volume/robmovil_ekf/src/install/: local_setup.sh  setup.sh
volume/robmovil_ekf/src/log/: latest_build
volume/robmovil_msgs/: CMakeLists.txt  package.xml
volume/robmovil_msgs/msg/: LandmarkArray.msg  MultiEncoderTicks.msg  Trajectory.msg  TrajectoryPoint.msg
volume/ros2-keyboard/keyboard/: CMakeLists.txt
volume/urdf_omni/: omni.urdf  omni_Hokuyo_URG_04LX_UG01_ROS_body_vis_1.dae  omni_Hokuyo_URG_04LX_UG01_ROS_body_vis_2.dae  omni_Hokuyo_URG_04LX_UG01_ROS_body_vis_3.dae  omni_ME_Platfo2_sub1_vis_1.dae  omni_ME_Platfo2_sub1_vis_3.dae  omni_Rectangle_vis_1.dae  omni_swedishWheel_fl_vis_1.dae  omni_swedishWheel_fl_vis_2.dae  omni_swedishWheel_fl_vis_3.dae  omni_swedishWheel_fr_vis_1.dae  omni_swedishWheel_fr_vis_2.dae  omni_swedishWheel_fr_vis_3.dae  omni_swedishWheel_rl_vis_1.dae  omni_swedishWheel_rl_vis_2.dae  omni_swedishWheel_rl_vis_3.dae  omni_swedishWheel_rr_vis_1.dae  omni_swedishWheel_rr_vis_2.dae  omni_swedishWheel_rr_vis_3.dae
