<?xml version="1.0"?>
<package format="3">
  <name>imu_laser</name>
  <version>0.0.0</version>
  <description>imu_laser package</description>
  <maintainer email="francisco.raverta@gmail.com">FranciscoRaverta</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robmovil_msgs</depend>
  <depend>angles</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
