<?xml version="1.0"?>
<package format="3">
  <name>lazo_cerrado</name>
  <version>2.0.0</version>
  <description>Taller de control de trayectoria a lazo cerrado con un modelo de tracción omnidireccional.</description>

  <maintainer email="francisco.raverta@gmail.com">FranciscoRaverta</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>robmovil_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>angles</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>lazo_abierto</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
