<?xml version="1.0"?>
<package format="3">
  <name>modelo_omnidireccional</name>
  <version>0.1.0</version>
  <description>Taller de introducción a ROS 2.</description>
  <license>Apache-2.0</license>

  <!-- Mandatory maintainer -->
  <maintainer email="fraverta@dc.uba.ar">FranciscoRaverta</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>keyboard</depend>
  <depend>robmovil_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
